# state-surf

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements-simulator.txt
.github/workflows/: coverity-scan.yml
cmake/: CPM.cmake
cpp/static_analysis/: CMakeLists.txt  hsm_header_check.cpp
cpp/test/: CMakeLists.txt  hsm_machine_test.cpp
doc/: requirements.md
plantuml/: fsm.puml  hsm.puml
python/: statesurf.py
python/templates/: cpp_header.j2
python/templates/cpp/: machine.j2
python/templates/python/: machine.py.j2  simulator_app.py.j2
python/templates/rust/: machine.rs.j2
python/tests/: test_hsm_machine.py  test_simulate_cli.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/tests/: hsm_machine_test.rs
script/: build_cpp.sh  build_rust.sh  build_static_analysis.sh  generate.sh  run-clang-tidy.sh  run-cppcheck.sh  run_cpp_test.sh  run_python_test.sh  run_rust_test.sh  test_all.sh
